Adjustments to docking localization support, update submodules

--- a/DockingTest/DockingTest.csproj
+++ b/DockingTest/DockingTest.csproj
@@ -82,4 +82,23 @@
       <Name>DockingExamples</Name>
     </ProjectReference>
   </ItemGroup>
+  <ProjectExtensions>
+    <MonoDevelop>
+      <Properties>
+        <GtkDesignInfo generateGettext="False" />
+      </Properties>
+    </MonoDevelop>
+  </ProjectExtensions>
+  <ItemGroup>
+    <Folder Include="Languages\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Languages\DockingTest-en-US.resx">
+      <LastGenOutput>Docking-default.Designer.cs</LastGenOutput>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Languages\DockingTest-de-DE.resx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
