--- a/DockingTest/DockingTest.csproj
+++ b/DockingTest/DockingTest.csproj
@@ -9,6 +9,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>DockingTest</RootNamespace>
     <AssemblyName>DockingTest</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>True</DebugSymbols>
